Bitcoin_LSTM_model.ipynb

--- a/Bitcoin_LSTM_model.ipynb
+++ b/Bitcoin_LSTM_model.ipynb
@@ -5,8 +5,8 @@
    "id": "2c18c874",
    "metadata": {},
    "source": [
-    "# Binance API\n",
-    "document: https://python-binance.readthedocs.io/en/latest/market_data.html"
+    "# Bitcoin price prediction in LSTM model",
+    "This notebook demonstrates how to build and tune a deep learning model using LSTM to predict Bitcoin closing prices based on historical data."
    ]
   },
   {
@@ -17,6 +17,7 @@
    "outputs": [],
    "source": [
     "#API keys for accessing the API\n",
+    "#Binance API documentation: https://python-binance.readthedocs.io/en/latest/market_data.html"
     "api_key='YOUR_API_KEY'\n",
     "api_secret='YOUR_API_SECRET'"
    ]
