Bitcoin_LSTM_model.ipynb

--- a/Bitcoin_LSTM_model.ipynb
+++ b/Bitcoin_LSTM_model.ipynb
@@ -5,7 +5,7 @@
    "id": "2c18c874",
    "metadata": {},
    "source": [
-    "# Bitcoin price prediction in LSTM model",
+    "# Bitcoin price prediction in LSTM model\n",
     "This notebook demonstrates how to build and tune a deep learning model using LSTM to predict Bitcoin closing prices based on historical data."
    ]
   },
