Bitcoin_LSTM_model.ipynb

--- a/Bitcoin_LSTM_model.ipynb
+++ b/Bitcoin_LSTM_model.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "#API keys for accessing the API\n",
-    "#Binance API documentation: https://python-binance.readthedocs.io/en/latest/market_data.html",
+    "#Binance API documentation: https://python-binance.readthedocs.io/en/latest/market_data.html\n",
     "api_key='YOUR_API_KEY'\n",
     "api_secret='YOUR_API_SECRET'"
    ]
